# zeal-checkers

./: CMakeLists.txt  README.md
assets/: checkers.aseprite  checkers.tiled-session  checkers.tmx  checkers.tsx
src/: assets.c  assets.h  audio.h  checkers.c  checkers.h  checkers_ai.c  checkers_ai.h  checkers_internal.h  input.c  input.h  main.c  main.h  render.c  render.h  splash.c  splash.h
